--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@solana/web3.js": "^1.98.2",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,7 +39,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
