--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
         "src": "package.json",
         "use": "@vercel/next",
         "config": {
-          "installCommand": "npm install --legacy-peer-deps"
+          "installCommand": "npm install --legacy-peer-deps tailwindcss postcss autoprefixer"
         }
       }
     ]
