--- a/package.json
+++ b/package.json
@@ -13,32 +13,34 @@
     "@irys/web-upload": "^0.0.14",
     "@irys/web-upload-solana": "^0.1.8",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.4",
-    "@metaplex-foundation/mpl-core": "^1.1.1",
-    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
-    "@metaplex-foundation/umi": "^1.2.0",
-    "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
-    "@metaplex-foundation/umi-signer-wallet-adapters": "^1.2.0",
-    "@metaplex-foundation/umi-uploader-irys": "^1.2.0",
+    "@metaplex-foundation/mpl-core": "1.3.0",
+    "@metaplex-foundation/mpl-token-metadata": "3.4.0",
+    "@metaplex-foundation/umi": "1.0.0",
+    "@metaplex-foundation/umi-bundle-defaults": "1.0.0",
+    "@metaplex-foundation/umi-signer-wallet-adapters": "1.0.0",
+    "@metaplex-foundation/umi-uploader-irys": "1.0.0",
     "@solana/wallet-adapter-base": "^0.9.26",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
     "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
+    "csv-parse": "^5.3.3",
+    "csv-stringify": "^6.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.0.1",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^20.11.25",
+    "@types/react": "^19.0.25",
+    "@types/react-dom": "^19.0.12",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.3.1",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
