--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
+    "autoprefixer": "^10.4.14",
     "next": "15.3.1",
+    "postcss": "^8.4.24",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14",
-    "csv-parse": "^5.3.3",
-    "csv-stringify": "^6.2.0"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.1",
