--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.2",
     "autoprefixer": "^10.4.14",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
+    "got": "^11.8.6",
     "next": "15.3.1",
     "postcss": "^8.4.24",
     "react": "19.1.0",
