--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "csv-stringify": "^6.5.2",
     "got": "^11.8.6",
     "next": "15.3.1",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.24",
+    "postinstall-postinstall": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwindcss": "^3.3.0"
